<resources>
    <string name="app_name">Products</string>
    <string name="box">margin</string>
    <string name="tv_product1">Makeup kit</string>
    <string name="tv_product2">Facial Cream</string>
    <string name="tv_product3">Foot Cream</string>
    <string name="tv_product4">Lipstick</string>
    <string name="tv_product5">Massage Oil</string>
    <string name="tv_product6">Facial Powder</string>
    <string name="tv_Itemname1">Cosmetic Organizer Makeup Storage Box</string>
    <string name="btn_purachse">Purchase</string>
    <string name="btn_addToCart">Add To Cart</string>
    <string name="tv_cart">Order Details</string>
    <string name="tv_i1">Item 1</string>
    <string name="tv_i">Item 2</string>
    <string name="tv_i3">Sub Total</string>
    <string name="btn_cont">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_delivery">Delivery</string>
    <string name="btn_takeaway">Takeaway</string>
    <string name="tv_reciverdetails">Reciever Details</string>
    <string name="tv_taName">Name</string>
    <string name="et_takename">Enter name</string>
    <string name="tv_taEmail">Email</string>
    <string name="et_takeemail">Enter email</string>
    <string name="tv_taPhone">Phone</string>
    <string name="et_takephone">Enter phone number</string>
    <string name="tv_takesub">Sub Total</string>
    <string name="btn_takeplaceorder">Place Order</string>
    <string name="tv_location">Enter your delivery location</string>
    <string name="tv_sender">Sender Details</string>
    <string name="tv_sendername">Name</string>
    <string name="tv_senderemail">Email</string>
    <string name="tv_senderphone">Phone</string>
    <string name="et_sendername">Enter name</string>
    <string name="et_senderemail">Enter Email</string>
    <string name="et_senderphone">Enter phone</string>
    <string name="tv_tot">Total</string>
    <string name="tv_deliveryfee">Delivery Charge - 5%</string>
    <string name="tv_delsubtota">Sub Total</string>
    <string name="tv_paydetails">Item order/payment details</string>
    <string name="radioBtn_visa">Visa</string>
    <string name="radioBtn_master">Master Card</string>
    <string name="radioBtn_express">American Express</string>
    <string name="tv_holdername">Card holder\'s name</string>
    <string name="et_holdersname">Card holder\'s name</string>
    <string name="tv_cardNumber">Card number</string>
    <string name="tv_date">Exp date</string>
    <string name="et_cardNumber">Card number</string>
    <string name="btn_paynow">Pay Now</string>
    <string name="btn_addItem">Add Items</string>
    <string name="tv_productName">Product Name</string>
    <string name="et_addName">Enter Name</string>
    <string name="tv_productName2">Price</string>
    <string name="et_addprice">Enter Price</string>
    <string name="tv_addItemName">Product Name</string>
    <string name="et_addItemName">Enter product name</string>
    <string name="tv_addItemprice">Price</string>
    <string name="et_addItemprice">Enter price</string>
    <string name="tv_a">Product Description</string>
    <string name="tv_addItemDes">Description</string>
    <string name="et_addItemDescription">Enter product description</string>
    <string name="btn_addProduct">Add</string>
    <string name="tv_updatename">Product Name</string>
    <string name="tv_updateprice">Price</string>
    <string name="tv_updatedes">Description</string>
    <string name="btn_extra">Select</string>
    <string name="tv_discount">Discount Amount</string>
    <string name="tv_discountedTotal">Discounted total</string>
    <string name="tv_disAmount">0.0</string>
    <string name="btn_IPurchase2">Purchase</string>
    <string name="tv_senderD">Sender Details</string>
    <string name="btn_take">Takeaway</string>
    <string name="btn_deli">Delivery</string>


    //nisura
    <string name="rd_btn3">Kids</string>
    <string name="rd_btn2">Women</string>
    <string name="rd_btn1">Men</string>
    <string name="tv_1">Hair Cut</string>
    <string name="rd_btn4">Mineral Makeup</string>
    <string name="rd_btn5">Matte Makeup</string>
    <string name="rd_btn6">Air-Brush Makeup</string>
    <string name="rd_btn7">Normal Makeup</string>
    <string name="tv_2">Make-Up</string>
    <string name="rd_btn8">Full Body Massage</string>
    <string name="rd_btn9">Couple Body Massage</string>
    <string name="rd_btn10">Foot Massage</string>
    <string name="tv_3">Massages</string>
    <string name="rd_btn_payonline">Pay Online</string>
    <string name="rd_btn_payshop">Pay To Shop</string>
    <string name="tv_4">Card Holder\'s Name</string>
    <string name="et_cardholdersname" />
    <string name="et_holdersnames">Card Holder\'s Name</string>
    <string name="tv_5">Card No</string>
    <string name="et_cardno">Enter Card No</string>
    <string name="tv_7">Expire Date</string>
    <string name="et_amount">Amount</string>
    <string name="btn_service_next">NEXT</string>
    <string name="btn_service_paynow">PAY-NOW</string>
    <string name="tv_10">PAYMENT COMPLETED</string>
    <string name="tv_11">Your Booking Has Confirmed</string>
    <string name="tv_12">Thanks For Choosing Us!</string>
    <string name="btn_pay_back_home">HOME</string>
    <string name="btn_confirmpayment">CONFIRM</string>
    <string name="tv_skin"><![CDATA[Skin & Care]]></string>
    <string name="tv_wedding">Weddings</string>
    <string name="rd_btn_skin1">Fruit Facial</string>
    <string name="rd_btn_skin2">Acne Facial</string>
    <string name="rd_btn_skin3">Full Body</string>
    <string name="rd_btn_wed1">Female Dressing</string>
    <string name="rd_btn_wed2">Male Dressing</string>
    <string name="btn_add_list">Add To List</string>
    <string name="tv_cardno">Card No</string>
    <string name="tv_featured_services">Featured Services</string>
    <string name="tv_make_up">Make-Ups</string>
    <string name="tv_massages_home">Massages</string>
    <string name="tv_featured_items">Featured Items</string>
    <string name="tv_makeupkit">Makeup-Kits</string>
    <string name="tv_lipstik">Lipstik</string>
    <string name="btn_home_service">View All</string>
    <string name="btn_home_items">View All</string>

</resources>