<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".takeaway">

    <View
        android:id="@+id/takeaway_view1"
        android:layout_width="371dp"
        android:layout_height="290dp"
        android:background="@color/box"
        android:backgroundTint="@color/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/et_takename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/et_takename"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/takeaway_view1"
        app:layout_constraintEnd_toEndOf="@+id/takeaway_view1"
        app:layout_constraintTop_toBottomOf="@+id/tv_reciverdetails"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/et_takeemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/et_takeemail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/takeaway_view1"
        app:layout_constraintEnd_toEndOf="@+id/takeaway_view1"
        app:layout_constraintTop_toBottomOf="@+id/tv_reciverdetails"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/tv_taPhone"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:text="@string/tv_taPhone"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_takephone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_takephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/et_takephone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/takeaway_view1"
        app:layout_constraintEnd_toEndOf="@+id/takeaway_view1"
        app:layout_constraintTop_toBottomOf="@+id/tv_reciverdetails"
        app:layout_constraintVertical_bias="0.754" />

    <TextView
        android:id="@+id/tv_taEmail"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:text="@string/tv_taEmail"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_takeemail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_taName"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:text="@string/tv_taName"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_takename"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reciverdetails"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:text="@string/tv_reciverdetails"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/takeaway_view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="@+id/takeaway_view1"
        app:layout_constraintTop_toTopOf="@+id/takeaway_view1"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/tv_takesub"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginBottom="216dp"
        android:text="@string/tv_takesub"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_takesubtot"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_takesub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_takesub" />

    <Button
        android:id="@+id/btn_takeplaceorder"
        android:layout_width="221dp"
        android:layout_height="68dp"
        android:text="@string/btn_takeplaceorder"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeaway_view1"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/tv_takeHead"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:text="Takeaway"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/takeaway_view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
